Kubernetes/dep-back-cursos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Despliegue de componente ms-cursos"
  name: deployment-ms-cursos
  namespace: prod-back
  labels:
    app: dep-ms-cursos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tg-ms-cursos
  template:
    metadata:
      labels:
        app: tg-ms-cursos
    spec:
      containers:
      - name: ms-cursos
        image: gardinsoft/tg-cursos:v1.0.2
        resources:
          limits:
            memory: "300Mi"
            cpu: "0.3"
          requests:
            memory: "100Mi"
            cpu: "0.1"
        readinessProbe:
          tcpSocket:
            port: 8001
          initialDelaySeconds: 60
          periodSeconds: 30
        livenessProbe:
          tcpSocket:
            port: 8001
          initialDelaySeconds: 60
          periodSeconds: 30
