Kubernetes/dep-back-respuestas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Despliegue de componente ms-respuestas"
  name: deployment-ms-respuestas
  labels:
    app: dep-ms-respuestas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tg-ms-respuestas
  template:
    metadata:
      labels:
        app: tg-ms-respuestas
    spec:
      containers:
      - name: ms-respuestas
        image: gardinsoft/tg-respuestas:v1.0.0
