Kubernetes/dep-back-eureka_ha.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: produccion
  labels:
    app: eureka
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      name: eureka
  selector:
    app: eureka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  namespace: produccion
spec:
  serviceName: 'eureka'
  # n instances
  replicas: 2
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: gardinsoft/tg-eureka:v1.0.1
          ports:
            - containerPort: 8761
          livenessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
