Kubernetes/dep-back-sconfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Despliegue de componente Config Server"
  name: deployment-sconfig
  labels:
    app: dep-sconfig
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tg-sconfig
  template:
    metadata:
      labels:
        app: tg-sconfig
    spec:
      containers:
      - name: tg-config-server
        image: gardinsoft/tg-sconfig:v1.0.0

---

apiVersion: v1
kind: Service
metadata:
  name: tg-config-server
  labels:
    app: ser-sconfig
spec:
  type: NodePort
  selector:
    app: tg-sconfig
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
