Kubernetes/dep-back-zuul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Despliegue de componente ms-zuul en su version 1.0.1"
  name: deployment-ms-zuul
  namespace: produccion
  labels:
    app: dep-ms-zuul
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tg-ms-zuul
  template:
    metadata:
      labels:
        app: tg-ms-zuul
    spec:
      containers:
      - name: tg-ms-zuul
        image: gardinsoft/tg-zuul:v1.0.1
        readinessProbe:
          tcpSocket:
            port: 8090
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8090
          initialDelaySeconds: 180
          periodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: campus-ms-zuul
  namespace: produccion
  labels:
    app: ser-ms-zuul
spec:
  type: NodePort
  selector:
    app: tg-ms-zuul
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
